[project]
name = "bacnet-scan-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "C. Allwardt",email = "3979063+craig8@users.noreply.github.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "bacpypes (>=0.18.0,<1.0.0)",
    "sqlmodel (>=0.0.8,<1.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [
    {include="bacnet_scan_tool", from="src"}] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
protocol_proxy = { path = "../volttron-lib-protocol-proxy" }